# tale-tinker

./: .gitignore  LICENSE  README.md  openai_client.py  pyproject.toml
storygen/: apps.py  views.py
templates/: _base.html
templates/pages/: home.html
