[tool.poetry]
name = "tale-tinker"
version = "0.1.0"
description = "A fun experiment at creating a storybook generator with OpenAI and Django"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "^3.7.2"
certifi = "^2022.12.7"
cffi = "^1.15.1"
charset-normalizer = "^3.0.1"
crispy-bootstrap5 = "^2023.10"
cryptography = "^39.0.1"
defusedxml = "^0.7.1"
Django = "^5.0.1"
django-allauth = "^0.60.1"
django-crispy-forms = "^2.1"
django-debug-toolbar = "^4.2.0"
gunicorn = "^21.2.0"
idna = "^3.4"
oauthlib = "^3.2.2"
openai = "^1.9.0"
packaging = "^23.1"
psycopg = "^3.1.17"
psycopg-binary = "^3.1.17"
pycparser = "^2.21"
PyJWT = "^2.6.0"
python3-openid = "^3.2.0"
requests = "^2.28.2"
requests-oauthlib = "^1.3.1"
sqlparse = "^0.4.3"
typing_extensions = "^4.5.0"
urllib3 = "^1.26.14"
whitenoise = "^6.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
